# gamepad-srv

./: CHANGELOG.md  Cargo.toml  cog.toml  todo.md
.github/actions/setup-cog/: action.yml
.github/workflows/: build.yml  bump.yml  release.yml
assets/: custom-local.css  index.html  script.js  style.css
assets/gpv/: custom.css
src/: event_processor.rs  gamepad_state.rs  main.rs
