[package]
name = "gamepad_srv"
version = "0.1.0"
edition = "2024"
metadata = { embedded-dependencies = true }

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
futures = "0.3.31"
gilrs = "0.8"
local-ip-address = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "signal", "tokio-macros"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
debug = 0
strip = true
panic = "abort"
codegen-units = 1